Upate busines service implementation to use the custom made exceptions rather than RuntimeExceptions.