@@ -1,8 +1,6 @@
 package app.business;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -51,8 +49,8 @@ public class BusinessController {
   }
 
   @PutMapping("/{id}")
-  public ResponseEntity<CompanyDTO> updateBusiness(
-      @PathVariable Long id, @RequestBody UpdateBusinessRequest request) {
+  public ResponseEntity<CompanyDTO> updateBusiness(@PathVariable Long id,
+      @RequestBody UpdateBusinessRequest request) {
     Company updatedBusiness = businessService.updateBusiness(id, request);
     CompanyDTO dto = dtoFactory.createDTO(updatedBusiness);
     return ResponseEntity.ok(dto);
@@ -74,8 +72,7 @@ public class BusinessController {
   @GetMapping
   public ResponseEntity<List<CompanyDTO>> getAllBusinesses() {
     List<Company> businesses = businessService.getAllBusinesses();
-    List<CompanyDTO> dtos =
-        businesses.stream().map(dtoFactory::createDTO).collect(Collectors.toList());
+    List<CompanyDTO> dtos = businesses.stream().map(dtoFactory::createDTO).toList();
     return ResponseEntity.ok(dtos);
   }
 }
